spec/v1/examples/data/rendered/apps/data/platform-rabbitmq/service.yaml
# GENERATED. Never hand-edit.
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: data-system
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/part-of: platform-rabbitmq
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  selector:
    app.kubernetes.io/instance: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
    - name: management
      port: 15672
      targetPort: management
    - name: metrics
      port: 15692
      targetPort: metrics
