spec/v1/examples/data/rendered/apps/data/platform-rabbitmq/networkpolicy.yaml
# GENERATED. Never hand-edit.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq
  namespace: data-system
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/part-of: platform-rabbitmq
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: rabbitmq
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: edge-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: traefik-public
      ports:
        - protocol: TCP
          port: 15672
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: prometheus
      ports:
        - protocol: TCP
          port: 15692
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: rabbitmq-backup
      ports:
        - protocol: TCP
          port: 15672
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-backup
  namespace: data-system
  labels:
    app.kubernetes.io/name: rabbitmq-backup
    app.kubernetes.io/instance: rabbitmq-backup
    app.kubernetes.io/part-of: platform-rabbitmq
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: rabbitmq-backup
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: data-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: rabbitmq
      ports:
        - protocol: TCP
          port: 15672
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
